# fii-dashboard

./: .gitignore  README.md  etl.py  extract.py  hello.py  pyproject.toml  sync.pq  sync_data.py
.github/workflows/: actions.yml  extract.yml
data/raw/: inf_anual_fii_ativo_adquirido_2017.csv  inf_anual_fii_ativo_adquirido_2019.csv  inf_anual_fii_ativo_adquirido_2021.csv  inf_anual_fii_ativo_adquirido_2024.csv  inf_anual_fii_ativo_transacao_2016.csv  inf_anual_fii_ativo_transacao_2017.csv  inf_anual_fii_ativo_transacao_2021.csv  inf_anual_fii_ativo_valor_contabil_2016.csv  inf_anual_fii_ativo_valor_contabil_2018.csv  inf_anual_fii_ativo_valor_contabil_2023.csv  inf_anual_fii_complemento_2016.csv  inf_anual_fii_complemento_2018.csv  inf_anual_fii_complemento_2019.csv  inf_anual_fii_diretor_responsavel_2016.csv  inf_anual_fii_diretor_responsavel_2017.csv  inf_anual_fii_distribuicao_cotistas_2016.csv  inf_anual_fii_distribuicao_cotistas_2019.csv  inf_anual_fii_distribuicao_cotistas_2020.csv  inf_anual_fii_distribuicao_cotistas_2024.csv  inf_anual_fii_experiencia_profissional_2016.csv  inf_anual_fii_experiencia_profissional_2018.csv  inf_anual_fii_experiencia_profissional_2020.csv  inf_anual_fii_experiencia_profissional_2021.csv  inf_anual_fii_geral_2017.csv  inf_anual_fii_prestador_servico_2017.csv  inf_anual_fii_prestador_servico_2020.csv  inf_anual_fii_prestador_servico_2023.csv  inf_anual_fii_processo_2016.csv  inf_anual_fii_processo_2020.csv  inf_anual_fii_processo_2024.csv  inf_anual_fii_processo_semelhante_2016.csv  inf_anual_fii_processo_semelhante_2020.csv  (+34 more)
(+153 files in other folders)
